# starpu_gemm

./: .clang-format  .envrc  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  accumulate_func.cu  accumulate_func.h  asserteq_func.cpp  asserteq_func.hpp  bench.sh  blas.cpp  blas.cu  blas.hpp  bzero_func.cu  bzero_func.hpp  cublas_perf.cpp  cublas_perf.cu  fill_func.cpp  fill_func.cu  fill_func.hpp  gemm.cpp  gemm_func.cpp  gemm_func.cu  gemm_func.h  gemm_func.hpp  matrix.hpp  plot.py  plotgen.py  plotgraph.py  print_func.cpp  starpu_accumulate_perf_model_float.gp  starpu_accumulate_perf_model_float_avg.data  test.sh  testing.org  yologen-pp.py  yolograph-pp.py
.envrc.d/: .envrc.guix.cuda
cmake/: extends.cmake
include/: config.h
src/: accumulate_func.cpp  accumulate_func.hpp  asserteq_func.cpp  asserteq_func.hpp  blas.cpp  blas.hpp  bzero_func.cpp  bzero_func.hpp  cublas.cpp  cublas_perf.cpp  cublas_perf.hpp  fill_func.cpp  fill_func.hpp  gemm.cpp  gemm_func.cpp  gemm_func.hpp  getm.cpp  helper.hpp  matrix.hpp  ppgemm.cpp  print_func.cpp  print_func.hpp
src/fns/: asserteq_func.cpp  fill_func.cpp
src/matrix/: accumulate_func.cpp  asserteq_func.cpp  asserteq_func.hpp  blas.cpp  blas.hpp  bzero_func.cpp  cublas_perf.cpp  cublas_perf.hpp  fill_func.cpp  fill_func.hpp  gemm_func.cpp  matrix.hpp  print_func.cpp  print_func.hpp
src/ppmatrix/: ppmatrix.cu  ppmatrix.hpp  pputils.hpp
src/tensor/: algorithm.cpp  algorithm.hpp  tensor.hpp  tensor_add_func.cpp  tensor_add_func.hpp  tensor_asserteq_func.cpp  tensor_asserteq_func.hpp  tensor_fill_func.cpp  tensor_fill_func.hpp  tensor_print_func.cpp  tensor_print_func.hpp
src/util/: argparse.hpp  dim_iter.hpp  helper.hpp  lapackAPI.hpp  make_array.hpp  matrix.hpp
